apps/docs/pages/contracts/api/v1/fragments/registration.mdx
---
title: Registration
description: Focused, tree-shakable ABI fragments for Registration.
---

import SharedSnippet0 from "../../../../../shared/contracts/entrypoint.mdx";
import SharedSnippet1 from "../../../../../shared/contracts/fragment.mdx";
import SharedSnippet2 from "../../../../../shared/contracts/type-safety.mdx";

# Registration

Focused, tree-shakable ABI fragments for Registration.

## Import

```ts
import { ethRegistrarControllerV1CommitAbi } from "@ensforge/contracts/v1";
```

## Usage

:::code-group

```ts [contract.ts]
import { getContract } from "viem";

const contract = getContract({
  address,
  abi: ethRegistrarControllerV1CommitAbi,
  client: publicClient,
});
```

```ts [client.ts]
// [!include ~/snippets/contracts/client.ts]
```

:::

## Exports

| Export                              | Description                                             |
| ----------------------------------- | ------------------------------------------------------- |
| `ethRegistrarControllerV1CommitAbi` | Immutable ABI value with viem-compatible literal types. |

## Entrypoint

`@ensforge/contracts/v1`

<SharedSnippet0 />

<SharedSnippet1 />

## Type Safety

<SharedSnippet2 />

```ts
type Export = typeof ethRegistrarControllerV1CommitAbi;
```

## Compose fragments

```ts
const abi = [...ethRegistrarControllerV1CommitAbi, ...anotherFragment] as const;
```

Keep the composed value local to the call site so bundlers can remove unrelated contract surfaces.
